190722_TIL_modify 04_data_structure

--- a/01_python/04_data_structure.ipynb
+++ b/01_python/04_data_structure.ipynb
@@ -995,17 +995,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, [100, 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 얕은 복사의 경우\n",
     "\n",
@@ -1027,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,17 +1028,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, [1, 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "\n",
@@ -1093,7 +1077,17 @@
    "source": [
     "# List Comprehension\n",
     "\n",
-    "List를 만들 수 있는 간단한 방법이 있습니다."
+    "List Comprehension은 리스트 안에 식, for 문을 지정합니다.\n",
+    "\n",
+    "여러줄의 코드를 한 줄로 줄일 수 있습니다.\n",
+    "\n",
+    "한 줄짜리 for문은 List Comprehension으로 작성하자! 실행시간 단축시킬 수 있다!\n",
+    "\n",
+    "```python\n",
+    "[식 for 변수 in iterable] # 이게 조금 더 좋은 방법\n",
+    "\n",
+    "list(식 for 변수 in iterable)\n",
+    "```"
    ]
   },
   {
@@ -1113,15 +1107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = range(1, 11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 기존의 방법"
    ]
   },
@@ -1131,7 +1116,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cubic_list = []\n",
+    "for i in range(1, 11):\n",
+    "    cubic_list.append(i**3)\n",
+    "print(cubic_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubic_list = [x**3 for x in range(1, 11)] # 식이 먼저 오고 구문이 뒤에 옴\n",
+    "print(cubic_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List Comprehension + 조건문\n",
+    "```python\n",
+    "[식 for 변수 in iterable if 조건식]\n",
+    "[식 if 조건식 else 식 for 변수 in iterable] : else가 붙은 경우\n",
+    "# elif는 다음과 같이 사용해야 합니다.(if 조건식의 나열)\n",
+    "[식 if 조건식 else 식 if 조건식 else 식 for 변수 in interable]\n",
+    "```"
    ]
   },
   {
@@ -1151,15 +1171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = range(1, 11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 기존의 방법"
    ]
   },
@@ -1169,7 +1180,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "even_list = []\n",
+    "for even in range(1, 11):\n",
+    "    if even % 2 == 0:\n",
+    "        even_list.append(even)\n",
+    "print(even_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "even_list2 = [even for even in range(1, 11) if even % 2 == 0]\n",
+    "print(even_list2)"
    ]
   },
   {
@@ -1221,7 +1255,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pair = []\n",
+    "for boy in boys:\n",
+    "    for girl in girls:\n",
+    "        pair.append((boy, girl))\n",
+    "print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List comprehension을 활용하여 만들어주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 큰 조건문부터 차례대로 쓰면 된다.\n",
+    "pair = [(boy, girl) for boy in boys for girl in girls]\n",
+    "print(pair)"
    ]
   },
   {
@@ -1257,7 +1315,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "triangle_nums = []\n",
+    "for x in range(1, 50):\n",
+    "    for y in range(x, 50):\n",
+    "        for z in range(y, 50):\n",
+    "            if x**2 + y**2 == z**2:\n",
+    "                triangle_nums.append((x, y, z))\n",
+    "print(triangle_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# List comprehension을 활용하여 만들어주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle_nums = [(x, y, z) for x in range(1, 50) for y in range(x, 50) for z in range(y, 50) if x**2 + y**2 == z**2]\n",
+    "print(triangle_nums)"
    ]
   },
   {
@@ -1285,6 +1368,31 @@
    "outputs": [],
    "source": [
     "# List comprehension을 활용하여 만들어주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = 'Life is too short, you need python!'\n",
+    "result = []\n",
+    "\n",
+    "for word in words:\n",
+    "    if word not in 'aeiou':\n",
+    "        result.append(word)\n",
+    "print(''.join(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = ''.join([word for word in words if word not in 'aeiou'])\n",
+    "print(result)"
    ]
   },
   {
@@ -1323,6 +1431,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "my_dict.pop('apple')\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 딕셔너리에 없으면 에러가 발생합니다"
    ]
   },
@@ -1332,7 +1450,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "my_dict.pop('melon')\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 두번째 인자로 default를 설정할 수 있습니다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict.pop('melon', 0)"
    ]
   },
   {
@@ -1352,6 +1489,16 @@
    "source": [
     "# update를 사용해봅시다.\n",
     "my_dict = {'apple': '사과', 'banana': '바나나', 'melon': '멜론'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict.update(apple = '사과아아아아아')\n",
+    "print(my_dict)"
    ]
   },
   {
@@ -1377,12 +1524,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(my_dict.get('pineapple'))\n",
+    "print(my_dict.get('apple'))\n",
+    "print(my_dict.get('coconut', 1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## dictionary comprehension\n",
+    "## dictionary comprehension (꼭 알아두자!)\n",
     "\n",
-    "dictionary도 comprehension을 활용하여 만들 수 있습니다. "
+    "dictionary도 comprehension을 활용하여 만들 수 있습니다. \n",
+    "```python\n",
+    "{키: 값 for 키, 값 in 딕셔너리}\n",
+    "dict(키: 값 for 키, 값 in 딕셔너리)\n",
+    "{키: 값 for 키, 값 in 딕셔너리 if 조건식}\n",
+    "{키: 값 if 조건식 else 값 for 키, 값 in 딕셔너리}\n",
+    "```"
    ]
   },
   {
@@ -1392,6 +1556,16 @@
    "outputs": [],
    "source": [
     "# dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cubic = {x: x**3 for x in range(1, 8)}\n",
+    "print(cubic)"
    ]
   },
   {
@@ -1426,6 +1600,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "result = {}\n",
+    "for region, val in dusts.items():\n",
+    "    if val > 80:\n",
+    "        result[region] = val\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = {region: val for region, val in dusts.items() if val>80}\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 미세먼지 농도가 80초과는 나쁨 80이하는 보통으로 하는 value를 가지도록 바꿔봅시다."
    ]
   },
@@ -1435,7 +1632,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# elif 도 사용할 수 있습니다."
+    "result_2 = {}\n",
+    "\n",
+    "for key, val in dusts.items():\n",
+    "    if val > 80:\n",
+    "        result_2[key] = '나쁨'\n",
+    "    else:\n",
+    "        result_2[key] = '보통'\n",
+    "print(result_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_2 = {key: '나쁨' if val>80 else '좋음' for key, val in dusts.items()}\n",
+    "print(result_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elif 도 사용할 수 있습니다.(if else 열거)\n",
+    "# 150초과 : 매우나쁨 / 80초과 : 나쁨 / 30초과 : 보통 / 그외 좋음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_3 = {key: '매우나쁨' if val>150 else '나쁨' if val>80 else '보통' if val>30 else '좋음' for key, val in dusts.items()}\n",
+    "print(result_3)"
    ]
   },
   {
@@ -1466,6 +1700,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.add('포도')\n",
+    "print(a) # 세트는 순서가 없으므로 index 접근할 수도 없고 무작위로 들어간다.\n",
+    "a.add('포도')\n",
+    "print(a) # 세트에서는 중복이 존재하지 않는다."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1484,6 +1730,16 @@
    "source": [
     "# update를 사용해봅시다.\n",
     "a = {'사과', '바나나', '수박'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.update({'토마토', '토마토', '딸기'}, {'포도', '레몬'})\n",
+    "print(a)"
    ]
   },
   {
@@ -1506,11 +1762,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.remove('사과')\n",
+    "print(a)\n",
+    "a.remove('애플')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### `.discard(elem)`\n",
-    "x를 세트에서 삭제하고 없어도 에러가 발생하지 않습니다."
+    "elem를 세트에서 삭제하고 없어도 에러가 발생하지 않습니다."
    ]
   },
   {
@@ -1521,6 +1788,17 @@
    "source": [
     "# discard를 사용해봅시다.\n",
     "a = {\"사과\", \"바나나\", \"수박\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.discard('바나나')\n",
+    "print(a)\n",
+    "a.discard('바나나')"
    ]
   },
   {
@@ -1543,6 +1821,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.pop())\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1553,7 +1841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `map(function, iterable)`\n",
+    "## `map(function, iterable)` (꼭 알아두자!)\n",
     "\n",
     "* Iterable의 모든 원소에 function을 적용한 후 그 결과를 돌려줍니다. \n",
     "\n",
@@ -1587,6 +1875,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "new_numbers = ''.join([str(num) for num in numbers])\n",
+    "print(new_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map\n",
+    "new_numbers = map(str, numbers)\n",
+    "#print(new_numbers)\n",
+    "print(''.join(new_numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "numbers = ['1', '2', '3']\n",
     "# 위의 코드를 [1, 2, 3]으로 만들어봅시다."
    ]
@@ -1598,6 +1908,27 @@
    "outputs": [],
    "source": [
     "# list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_numbers = [int(num) for num in numbers]\n",
+    "print(new_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# map\n",
+    "new_numbers = list(map(int, numbers)) # map object 자체를 함수로 호출해야 하므로 list()를 써야 함 (딕셔너리는 dict()로!)\n",
+    "print(new_numbers)"
    ]
   },
   {
@@ -1613,7 +1944,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 세제곱의 결과를 나타내는 함수"
+    "# 세제곱의 결과를 나타내는 함수\n",
+    "def cube(num):\n",
+    "    return num**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "result = list(map(cube, numbers)) # map에 들어가는 function 자리는 사용자 정의 함수명만 작성하면 됨.\n",
+    "print(result)"
    ]
   },
   {
@@ -1644,8 +1988,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "list(zip(girls, boys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for문으로 한 명씩 순서대로 매칭시켜봅시다.\n",
     "# 예) {'jane': 'justin', 'iu': 'david', 'mary': 'kim'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary comprehension\n",
+    "result = {girl: boy for girl in girls for boy in boys}\n",
+    "print(result)\n",
+    "# 이렇게 하면 이중 for 문이기 때문에, key는 유일해서 마지막 값을 덮어씌워진다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# zip\n",
+    "{girl: boy for girl, boy in zip(girls, boys)}"
    ]
   },
   {
@@ -1656,6 +2031,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = '123'\n",
+    "b = '567'\n",
+    "\n",
+    "for digit_a, digit_b in zip(a, b):\n",
+    "    print(digit_a, digit_b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1663,10 +2051,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = [1, 2, 3]\n",
+    "num2 = ['1', '2']\n",
+    "list(zip(num1, num2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* 길이가 긴 것을 맞춰서 할 수도 있지만, 사용할 일이 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import zip_longest\n",
+    "list(zip_longest(num1, num2, fillvalue=0))"
    ]
   },
   {
@@ -1693,7 +2102,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def odd(num):\n",
+    "    return num % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "list(filter(odd, numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 다음의 list comprehension과 동일하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[x for x in numbers if x % 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[x for x in numbers if odd(x)]"
    ]
   }
  ],
