190722_add 04_data_structure_00

--- a/01_python/04_data_structure.ipynb
+++ b/01_python/04_data_structure.ipynb
@@ -221,7 +221,7 @@
    "source": [
     "# 아래에 코드를 작성하세요.\n",
     "'apple'.find('p')\n",
-    "'apple'.find('o_)"
+    "'apple'.find('o')"
    ]
   },
   {
@@ -2175,7 +2175,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "229.176px"
+    "width": "229.172px"
    },
    "toc_section_display": true,
    "toc_window_display": true
