190722_add 04_data_structure_00 solution

--- a/01_python/problems/04_data_structure_00.ipynb
+++ b/01_python/problems/04_data_structure_00.ipynb
@@ -383,6 +383,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 3. 아스키코드 활용\n",
+    "\n",
+    "def pick_and_sum(long_string):\n",
+    "    sum = 0\n",
+    "    temp = []\n",
+    "    for letter in long_string:\n",
+    "        if ord(letter) in range(48, 58):\n",
+    "            temp.append(letter)\n",
+    "        if temp != []:\n",
+    "            if ord(letter) not in range(48, 58):\n",
+    "                sum += int(''.join(temp))\n",
+    "                temp = []\n",
+    "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(pick_and_sum('The30quick20brown10f0x1203jumps914ov3r1349the102l4zy dog'))"
    ]
