190723_solve 04_data_structure_00

--- a/01_python/problems/04_data_structure_00.ipynb
+++ b/01_python/problems/04_data_structure_00.ipynb
@@ -53,6 +53,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2. 다른 풀이\n",
+    "\n",
+    "def gcdlcm(num1, num2):\n",
+    "    high = low = i = 0\n",
+    "    gcd = 1\n",
+    "    if num1 >= num2:\n",
+    "        high = num1\n",
+    "        low = num2\n",
+    "    else:\n",
+    "        high = num2\n",
+    "        low = num1\n",
+    "    for i in range(2, low+1):\n",
+    "        while low % i == 0 and high % i == 0:\n",
+    "            low = low // i\n",
+    "            high = high // i\n",
+    "            gcd = gcd * i\n",
+    "    lcm = gcd * low * high\n",
+    "    return gcd, lcm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최소공배수 = 두 수의 곱 / 최대공약수\n",
+    "# 둘 중의 큰 수를 찾아서 작은 수로 나눠나가야 함. 더 이상 큰 수를 나눌 수 없을 때가 최대 공약수가 나옴\n",
+    "\n",
+    "# 3. 강사가 푼 방법\n",
+    "\n",
+    "def gcdlcm(n, m):\n",
+    "    a, b = max(n, m), min(n, m)\n",
+    "    while b > 0:\n",
+    "        a, b = b, a%b # switching하는 것을 알아두자!\n",
+    "    return a, int(n*m / a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(gcdlcm(3, 12))\n",
     "print(gcdlcm(1071, 1029))"
    ]
@@ -83,6 +127,9 @@
    "outputs": [],
    "source": [
     "# 여기에 코드를 작성하세요\n",
+    "\n",
+    "# 내가 푼 방법\n",
+    "\n",
     "def snail(height, afternoon, night):\n",
     "    distance = days = 0\n",
     "    while distance < height:\n",
@@ -92,6 +139,27 @@
     "            break\n",
     "        distance -= night\n",
     "    return days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사가 푼 방법\n",
+    "\n",
+    "# 높이를 기준으로 낮시간 값은 높이-낮시간 / 밤시간 값은 높이+밤시간\n",
+    "\n",
+    "def snail(height, day, night):\n",
+    "    count = 0\n",
+    "    # 남은 높이가 0이 되거나 0보다 작아지는 순간 반복문이 종료.\n",
+    "    while True:\n",
+    "        count += 1\n",
+    "        height -= day\n",
+    "        if height <= 0: # 종료조건을 이와 같이 안에서 줄 수 있다.\n",
+    "            return count\n",
+    "        height += night"
    ]
   },
   {
@@ -129,6 +197,9 @@
    "outputs": [],
    "source": [
     "# 여기에 코드를 작성하시오.\n",
+    "\n",
+    "# 내가 푼 방법\n",
+    "\n",
     "def duplicated(data):\n",
     "    compare = []\n",
     "    result = []\n",
@@ -140,6 +211,35 @@
     "        else:\n",
     "            compare.append(data[i])\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. .count()\n",
+    "\n",
+    "def duplicated(words):\n",
+    "    duplicates = []\n",
+    "    for word in words:\n",
+    "        # 만약에 현재 단어가 리스트에 2개 이상 있고, duplicates에 없다면 값을 추가해야 한다.\n",
+    "        if words.count(word) > 1 and word not in duplicates:\n",
+    "            duplicates.append(word)\n",
+    "    return duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. set() (중복문제 해결하기는 set으로 많이 품)\n",
+    "\n",
+    "def duplicated(words):\n",
+    "    return list({word for word in words if words.count(word) > 1}) # 넣어도 이미 있으면 중복값은 추가되지 않는다."
    ]
   },
   {
@@ -181,9 +281,9 @@
     "def reverse_letter(letter):\n",
     "    reverse_text = letter[::-1]\n",
     "    result = ''\n",
-    "    for reverse in reverse_text:\n",
-    "        if reverse.isalpha():\n",
-    "            result += reverse\n",
+    "    for reverse_val in reverse_text:\n",
+    "        if reverse_val.isalpha():\n",
+    "            result += reverse_val\n",
     "    return result"
    ]
   },
@@ -196,10 +296,51 @@
     "# 여기에 코드를 작성하세요\n",
     "\n",
     "# 2. list comprehension\n",
-    "def reverse_letter(letter):\n",
-    "    reverse_text = letter[::-1]\n",
-    "    result = ''.join([reverse for reverse in reverse_text if reverse.isalpha()])\n",
-    "    return result"
+    "def reverse_letter(words):\n",
+    "    return ''.join([reverse_text for reverse_text in words[::-1] if reverse_text.isalpha()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사 풀이법(1)\n",
+    "\n",
+    "def reverse_letter(words):\n",
+    "    result = []\n",
+    "    for word in words:\n",
+    "        if word.isalpha():\n",
+    "            result.append(word)\n",
+    "    return ''.join(result[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_letter(words):\n",
+    "    result = [word for word in words if word.isalpha()]\n",
+    "    return ''.join(result[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 강사 풀이법(2)\n",
+    "\n",
+    "def reverse_letter(words):\n",
+    "    result = ''\n",
+    "    for word in words:\n",
+    "        if word.isalpha():\n",
+    "            result += word\n",
+    "    return result[::-1]"
    ]
   },
   {
@@ -238,18 +379,38 @@
     "    left_hand = 'qwertassdfgzxcvb'\n",
     "    right_hand = 'yuiophjklnm'\n",
     "    status = 0\n",
-    "    letter_length = 0\n",
     "    for letter in letters:\n",
     "        if letter in left_hand and status == 0:\n",
     "            status = 1\n",
-    "            letter_length += 1\n",
     "        elif letter in right_hand and status == 1:\n",
     "            status = 0\n",
-    "            letter_length += 1\n",
     "        else:\n",
     "            return False\n",
-    "    if letter_length == len(letters):\n",
-    "        return True"
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comfortable_word(words):\n",
+    "    left_word, right_word = 'qwertasdfgzxcvb', 'yuiophjklnm'\n",
+    "    # 왼손이면 True\n",
+    "    left = True if words[0] in left_word else False\n",
+    "    \n",
+    "    # 2번째부터 비교 시작\n",
+    "    for word in words[1:]:\n",
+    "        # 2번째 나온 단어가 왼손이고, 앞 단어도 왼손이라면 False\n",
+    "        if word in left_word and left:\n",
+    "            return False\n",
+    "        # 2번째 나온 단어가 오른손이고, 앞 단어도 오른손이라면 False\n",
+    "        if word in right_word and not left:\n",
+    "            return False\n",
+    "        # 만약 위 조건을 모두 만족하지 못했다면 편안한 단어이기 때문에 왼손, 오른손이 변경된 것이다.\n",
+    "        left = not left # 왼손 <-> 오른손 변경\n",
+    "    return True"
    ]
   },
   {
@@ -303,7 +464,82 @@
     "    if num > 0:\n",
     "        for i in range(1, num+1, 2):\n",
     "            result += f'{i}' * i + '\\n'\n",
+    "    else:\n",
+    "        return ''\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pattern(num):\n",
+    "    if num > 0:\n",
+    "        result = [f'{i}' * i + '\\n' for i in range(1, num+1, 2)]\n",
+    "    else:\n",
+    "        return ''\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pattern(num):\n",
+    "    return ''.join([f'{i}' * i + '\\n' for i in range(1, num+1, 2)]) if num > 0 else ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1\n",
+    "def pattern(n):\n",
+    "    result = ''\n",
+    "    if n % 2 == 0: # 짝수\n",
+    "        n -= 1\n",
+    "        \n",
+    "    for x in range(1, n+1):\n",
+    "        if x % 2: # 홀수\n",
+    "            result += str(x) * x\n",
+    "            if x != n:\n",
+    "                result += '\\n'\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2\n",
+    "def pattern(n):\n",
+    "    # 1부터 n 까지의 홀수 리스트를 생성\n",
+    "    odd = [x for x in range(1, n+1) if x%2] # 홀수 리스트 한 줄로 간단하게 만들기!\n",
+    "    result = ''\n",
+    "    for i in odd:\n",
+    "        result += str(i) * i + '\\n'\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 (# 2를 한 번에 합친 것)\n",
+    "def pattern(n):\n",
+    "    result = [str(x)*x for x in range(1, n+1) if x%2]\n",
+    "    return '\\n'.join(result)"
    ]
   },
   {
@@ -314,7 +550,8 @@
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(pattern(9))\n",
-    "print(pattern(6))"
+    "print(pattern(6))\n",
+    "print(pattern(0))"
    ]
   },
   {
@@ -353,9 +590,7 @@
     "        if letter.isdigit():\n",
     "            load_num_location += letter\n",
     "    \n",
-    "    return sum\n",
-    "\n",
-    "print(pick_and_sum('The30quick20brown10f0x1203jumps914ov3r1349the102l4zy dog'))"
+    "    return sum"
    ]
   },
   {
@@ -367,9 +602,9 @@
     "# 여기에 코드를 작성하세요.\n",
     "\n",
     "# 2. 외장 모듈 사용\n",
+    "import re\n",
     "\n",
     "def pick_and_sum(long_string):\n",
-    "    import re \n",
     "    sum = 0\n",
     "    numbers = re.findall('\\d+', long_string)\n",
     "    for i in range(len(numbers)):\n",
@@ -396,6 +631,47 @@
     "                sum += int(''.join(temp))\n",
     "                temp = []\n",
     "    return sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1\n",
+    "\n",
+    "# 결과를 낼 result 정수\n",
+    "# 잠시 저장해 둘 num 문자열 하나\n",
+    "\n",
+    "def pick_and_sum(words):\n",
+    "    result = 0\n",
+    "    num = ''\n",
+    "    for word in words:\n",
+    "        if word.isdecimal():\n",
+    "            num += word\n",
+    "        elif num: # num에 값이 있다면(즉, True임)\n",
+    "            result += int(num)\n",
+    "            num = ''\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2 (replace(), map()함수 사용) --- map() 함수를 알아두자!!\n",
+    "\n",
+    "# replace로 정수가 아닌 애들을 모두 공백으로 바꿈.\n",
+    "\n",
+    "def pick_and_sum(words):\n",
+    "    for word in words:\n",
+    "        if not word.isdecimal():\n",
+    "            words = words.replace(word, ' ')\n",
+    "    # print(words.split()) # 공백을 기준으로 리스트 생성(split() 사용)\n",
+    "    return sum(map(int, words.split()))"
    ]
   },
   {
