190724_add 04_data_structure_01

--- a/01_python/04_data_structure.ipynb
+++ b/01_python/04_data_structure.ipynb
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,16 +1984,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('jane', 'justin'), ('iu', 'david'), ('mary', 'kim')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(zip(girls, boys))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2003,9 +2014,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'jane': 'kim', 'iu': 'kim', 'mary': 'kim'}\n"
+     ]
+    }
+   ],
    "source": [
     "# dictionary comprehension\n",
     "result = {girl: boy for girl in girls for boy in boys}\n",
@@ -2015,9 +2034,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'jane': 'justin', 'iu': 'david', 'mary': 'kim'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# zip\n",
     "{girl: boy for girl, boy in zip(girls, boys)}"
@@ -2032,9 +2062,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 5\n",
+      "2 6\n",
+      "3 7\n"
+     ]
+    }
+   ],
    "source": [
     "a = '123'\n",
     "b = '567'\n",
