190725_modify 04_data_structure_01

--- a/01_python/problems/04_data_structure_01.ipynb
+++ b/01_python/problems/04_data_structure_01.ipynb
@@ -87,33 +87,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def passpass(test_score_info):\n",
-    "    result = []\n",
-    "    for subject, score in test_score_info.items():\n",
-    "        if score >= 60:\n",
-    "            result.append(subject)\n",
-    "    return result"
+    "    mid_result = sorted(test_score_info.items(), key = lambda x : x[1], reverse = True)\n",
+    "    final_result = []\n",
+    "    for element in mid_result:\n",
+    "        if element[1] < 60:\n",
+    "            mid_result.remove(element)\n",
+    "        else:\n",
+    "            final_result.append(element[0])\n",
+    "    return final_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def passpass(test_score_info):\n",
-    "    return [subject for subject, score in test_score_info.items() if score >= 60]"
+    "    mid_result = sorted(test_score_info.items(), key = lambda x : x[1], reverse = True)\n",
+    "    final_result = [element[0] for element in mid_result if element[1] >= 60]\n",
+    "    return final_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ruby', 'Python']\n"
+     ]
+    }
+   ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(passpass({'Java': 10, 'Ruby': 80, 'Python': 65}))"
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,9 +366,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def check_score(real_answers, my_answers):\n",
+    "    score = sum([4 if real == my else 0 if my == '' else -1 for real, my in zip(real_answers, my_answers)])\n",
+    "    return score if score >= 0 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "16\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# 해당 코드를 통해 올바른 결과가 나오는지 확인하세요.\n",
     "print(check_score(['a', 'a', 'b', 'b'], ['a', 'c', 'b', 'd']))\n",
